# scpp_logger

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux-release-build.yml  windows-release-build.yml
example/: CMakeLists.txt  component_one.cpp  component_one.hpp  component_two.cpp  component_two.hpp  main.cpp
include/: export_scpp_logger_api.hpp  logger.hpp  logging_level.hpp  scpp_logger.hpp
scripts/: build.bat  build.sh  smoke_tests.bat  smoke_tests.sh
src/: logger.cpp  scpp_logger.cpp
